<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dniUser" >
        </TextView>
 
        <EditText
            android:id="@+id/dniUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomUser" >
        </TextView>
 
        <EditText
            android:id="@+id/nomUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apeUser" >
        </TextView>
 
        <EditText
            android:id="@+id/apeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailUser" >
        </TextView>
 
        <EditText
            android:id="@+id/emailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_span="2" />
    </TableRow>
 
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <Button
            android:id="@+id/bn_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:onClick="volverLista"
            android:text="@string/regresar" />
        	<!-- android:onClick="retrieveSampleData" -->
 
        <Button
            android:id="@+id/bn_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="postData"
            android:text="@string/post" />
         
        <Button
            android:id="@+id/bn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearControls"
            android:text="@string/clear" />
         
    </TableRow>

</TableLayout>